--- a/src/sys-admin/message-page/adminMessage.css
+++ b/src/sys-admin/message-page/adminMessage.css
@@ -127,6 +127,9 @@ header .app-name a img {
 header .app-name a h1 {
   font-size: 1.7rem;
 }
+header .nav-phone {
+  display: none;
+}
 header nav {
   width: 50%;
   text-align: right;
@@ -195,9 +198,6 @@ header nav .dropdown:hover .dropdown-content {
 header nav .dropdown:hover .dropbtn {
   border-bottom: 3px solid #ffffff;
   padding-bottom: 5px;
-}
-header .nav-phone {
-  display: block;
 }
 
 .divider {
